gcc/testsuite/rust/rustc/ui/parser/self-in-function-arg.rs
fn foo(x:i32, self: i32) -> i32 { self } // { dg-error "" "" { target *-*-* } }

fn main() {}

